--- a/motion.html
+++ b/motion.html
@@ -1,195 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
+		rel="stylesheet">
+		<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel=
+		"stylesheet">
+		<link href="styles/css/global.css" rel="stylesheet" type="text/css">
+		<link href="styles/js/scroll.js" rel="stylesheet" type="text/javascript">
+		<link href="styles/js/jquery-3.4.1.js" rel="stylesheet" type=
+		"text/javascript">
+		<link href="assets/webfontkit/stylesheet.css" rel="stylesheet">
+		<link href="assets/images/photos/favicon.png" rel="icon" type="image/png">
+		<meta charset="UTF-8">
+		<title>
+			Steffi-Ann Mendoza
+		</title>
+	</head>
+	<body>
+		<header class="header p-3">
+			<a alt="" href="index.html" id="logo"><img src=
+			"assets/images/Steffi-Ann%20Mendoza.png"></a> <input class="menu-btn" id=
+			"menu-btn" type="checkbox"> <label class="menu-icon text" for=
+			"menu-btn"><span class="navicon"></span></label>
+			<ul class="menu text-white" style=
+			"font-family: Moon Flower,MoonFlower; font-size: 35px;">
+				<li>
+					<a href="motion.html">Motion</a>
+				</li>
 
-<head>
-	<meta charset="UTF-8">
-	<link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-	<link href="styles/css/global.css" type="text/css" rel="stylesheet">
-	<link href="styles/js/scroll.js" type="text/javascript" rel="stylesheet">
-	<link href="styles/js/jquery-3.4.1.js" type="text/javascript" rel="stylesheet">
-	<link href="assets/webfontkit/stylesheet.css" rel="stylesheet">
-	<link href="assets/images/photos/favicon.png" rel="icon" type="image/png">
-	<meta charset="UTF-8">
+				<li>
+					<a href="photography.html">Photography</a>
+				</li>
 
+				<li>
+					<a href="#contact">Contact</a>
+				</li>
+			</ul>
+		</header>
 
-	<title>Steffi-Ann Mendoza</title>
-</head>
-<body>
-
-<header class="header p-3">
-  <a href="index.html" alt id="logo"><img src="assets/images/Steffi-Ann Mendoza.png">
-			</a>
-
-  <input class="menu-btn" type="checkbox" id="menu-btn" />
-  <label class="menu-icon text" for="menu-btn"><span class="navicon"></span></label>
-  <ul class="menu text-white" style="font-family: Moon Flower,MoonFlower; font-size: 35px;" >
-    <li><a href="motion.html">Motion</a></li>
-    <li><a href="photography.html">Photography</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</header>
-
-		<nav class="invisible md:visible md:text-5xl text-3xl flex text-white justify-between sm:mx-auto" style="font-family: Moon Flower,MoonFlower;" alt="navBarDesktop">
-			<a href="motion.html" class="no-underline text-white">
-				Motion
-			</a>|
-			<a href="photography.html" class="no-underline text-white">
-				Photography
-			</a>|
-			<a href="#contact" class="no-underline text-white" style="">
-				Contact
-			</a>
+		<nav alt="navBarDesktop" class=
+		"invisible md:visible md:text-5xl text-3xl flex text-white justify-between sm:mx-auto"
+		style="font-family: Moon Flower,MoonFlower;">
+			<a class="no-underline text-white" href="motion.html">Motion</a> | <a class=
+			"no-underline text-white" href="photography.html">Photography</a> |
+			<a class="no-underline text-white" href="#contact" style="">Contact</a>
 		</nav>
 
-	</div>	
+		<div class="max-w-full">
+			<!-- End Header -->
+			<!-- Gallery -->
+			<link href="dist/lity.css" rel="stylesheet">
+			<script src="vendor/jquery.js">
+			</script> 
+			<script src="dist/lity.js">
+			</script> 
+			<script>
+			$(document).on('lity:ready', function(event, $lightbox) {
+			 var $triggeringElement = $lightbox.opener();
+			 $('.lity-content').append('<h2 class="text-white text-center">' + $triggeringElement.data('title') + '<\/h2><p class="text-grey-light text-center">' + $triggeringElement.data('desc') + '<\/p>');
+			});
+			</script>
+			<div class="container mx-auto">
+				<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Cinematographer, Editor, SFX" data-lity="" data-title=
+						"CSUN Student Life - Growth: Beyond the Classroom Episode 2" href=
+						"https://www.youtube.com/watch?v=aZmwnHTRnGc"><img src=
+						"motionthumb/thumb9.jpg"></a>
+					</div>
 
-<div class="max-w-full">
-<!-- End Header -->
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="2018" data-lity="" data-title="Stop Motion Test" href=
+						"https://www.youtube.com/watch?v=1H7bqSu00og"><img src=
+						"motionthumb/thumb1.jpg"></a>
+					</div>
 
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Cinematographer, Editor, SFX" data-lity="" data-title=
+						"Outside" href="https://www.youtube.com/watch?v=a0UuivpQo28"><img src=
+						"motionthumb/thumb2.jpg"></a>
+					</div>
 
-<!-- Gallery -->
-<link href="dist/lity.css" rel="stylesheet">
-<script src="vendor/jquery.js"></script>
-<script src="dist/lity.js"></script>
-<script>
-$(document).on('lity:ready', function(event, $lightbox) {
-    var $triggeringElement = $lightbox.opener();
-    $('.lity-content').append('<h2 class="text-white text-center">' + $triggeringElement.data('title') + '</h2><p class="text-grey-light text-center">' + $triggeringElement.data('desc') + '</p>');
-});
-</script>
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Cinematographer, Editor" data-lity="" data-title=
+						"Teenline Promotional Video" href=
+						"https://www.youtube.com/watch?v=WYvcxS8EGp4"><img src=
+						"motionthumb/thumb3.jpg"></a>
+					</div>
 
-<div class="container mx-auto">
-<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Cinematographer, SFX" data-lity="" data-title=
+						"Fuck Boy Away" href=
+						"https://www.youtube.com/watch?v=4HMnJGnxURY"><img src=
+						"motionthumb/thumb4.jpg"></a>
+					</div>
 
-	<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=aZmwnHTRnGc" data-lity data-title="CSUN Student Life - Growth: Beyond the Classroom Episode 2" data-desc="Cinematographer, Editor, SFX"><img src="motionthumb/thumb9.jpg"></a>  </div>
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Writer, Cinematographer, Editor" data-lity="" data-title=
+						"Girls Gone Gore" href=
+						"https://www.youtube.com/watch?v=k0tQrRsMkeo"><img src=
+						"motionthumb/thumb5.jpg"></a>
+					</div>
 
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=1H7bqSu00og" data-lity data-title="Stop Motion Test" data-desc="2018"><img src="motionthumb/thumb1.jpg" ></a></div>
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Cinematographer, Editor" data-lity="" data-title=
+						"Harajuku Walk 2016" href=
+						"https://www.youtube.com/watch?v=sUQGZL3LXNk"><img src=
+						"motionthumb/thumb6.jpg"></a>
+					</div>
 
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=a0UuivpQo28" data-lity data-title="Outside" data-desc="Cinematographer, Editor, SFX"><img src="motionthumb/thumb2.jpg"></a>  </div>
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Cinematographer, Editor, SFX, Music" data-lity=""
+						data-title="Outer Space Girl" href=
+						"https://www.youtube.com/watch?v=X1hqAayq4is"><img src=
+						"motionthumb/thumb7.jpg"></a>
+					</div>
 
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=WYvcxS8EGp4" data-lity data-title="Teenline Promotional Video" data-desc="Cinematographer, Editor"><img src="motionthumb/thumb3.jpg"></a>  </div>
+					<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+						<a data-desc="Audio, Cinematographer" data-lity="" data-title="Alex Romo"
+						href="https://www.youtube.com/watch?v=2zqMP6g0Fxk"><img src=
+						"motionthumb/thumb8.jpg"></a>
+					</div>
+				</div>
+			</div>
+			<!-- Body -->
 
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=4HMnJGnxURY" data-lity data-title="Fuck Boy Away" data-desc="Cinematographer, SFX"><img src="motionthumb/thumb4.jpg"></a>  </div>
+			<div alt="backgroundBreak" class=
+			"w-screen mx-auto flex-col flex overflow bg-bottom pb-12 mt-2" style=
+			"height: 100%; background: linear-gradient(180deg, #ffffff 50%, #000000 50%);">
+				<div alt="portrait" class=
+				"container-sm h-auto md:container-xl mx-auto pb-2">
+					<center>
+						<img class="content-center h-1/2 md:h-full" id="portrait" src=
+						"assets/images/portrait.png">
+					</center>
+				</div>
 
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=k0tQrRsMkeo" data-lity data-title="Girls Gone Gore" data-desc="Writer, Cinematographer, Editor"><img src="motionthumb/thumb5.jpg"></a>  </div>
-
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=sUQGZL3LXNk" data-lity data-title="Harajuku Walk 2016" data-desc="Cinematographer, Editor"><img src="motionthumb/thumb6.jpg"></a>  </div>
-
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=X1hqAayq4is" data-lity data-title="Outer Space Girl" data-desc="Cinematographer, Editor, SFX, Music"><img src="motionthumb/thumb7.jpg"></a>  </div>
-
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="https://www.youtube.com/watch?v=2zqMP6g0Fxk" data-lity data-title="Alex Romo" data-desc="Audio, Cinematographer"><img src="motionthumb/thumb8.jpg"></a>  </div>
-
-  
-
-</div>
-</div>
-
-
-<!-- Body -->
-
-<div class="w-screen mx-auto flex-col flex overflow bg-bottom pb-12 mt-2" style="height: 100%;
-    background: linear-gradient(180deg, #ffffff 50%, #000000 50%);" alt="backgroundBreak">
-	<div class="container-sm h-auto md:container-xl mx-auto pb-2" alt="portrait">
-		<center><img src="assets/images/portrait.png" id="portrait" class="content-center h-1/2 md:h-full"></center>
-	</div>
-	<div class="font-sans container block mx-auto text-white text-lg flex-col p-3" alt="aboutText" style="font-family: 'Roboto';">
-		<p class="">
-				Steffi-Ann Mendoza is a student at California State University, Northridge. She is part of the Cinema and Television Arts program, with an emphasis in Multimedia Production. She was the secretary for Los Angeles Pierce College's Film club, and she has worked as a Production intern for the CW television show <i>My Crazy Ex Girlfriend</i>.</p>
-	</div>
-</div>
-<!-- End Body -->
-
-</div>
-<!-- contact -->
-<div class="w-full h-full" alt id="contact">
-<div class="block w-full mx-auto pt-32">
-	<button class="block mt-24 mx-auto" style="border: none;
-    outline: none;" onclick="toggle()"><img src="assets/images/email.png"></button>
-			<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" style="font-family: MoonFlower, Moon Flower; text-align: center;" id="email">steffiann.mendoza@gmail.com</p>
-
-	<div class="flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32" alt="socialMedia">
-		<a class="inline-block p-5" href="#"><img src="assets/images/twitter.png"></a>
-		<a class="inline-block p-5" href="#"><img src="assets/images/linkdin.png"></a>
-		<a class="inline-block p-5" href="#"><img src="assets/images/vimeo.png"></a>
-		<a class="inline-block p-5" href="#"><img src="assets/images/youtube.png"></a>
-</div>
-<!-- footer -->
-	<div class="w-screen flex justify-between items-center" style="background-color: #000000;" alt="footerBar">
-		<div class="mx-auto flex" alt="logo">
-  <a href="index.html" alt id="logo"><img src="assets/images/Steffi-Ann Mendoza.png">
-			</a>
-
+				<div alt="aboutText" class=
+				"font-sans container block mx-auto text-white text-lg flex-col p-3" style=
+				"font-family: 'Roboto';">
+					<p class="">
+						Steffi-Ann Mendoza is a student at California State University,
+						Northridge. She is part of the Cinema and Television Arts program, with
+						an emphasis in Multimedia Production. She was the secretary for Los
+						Angeles Pierce College's Film club, and she has worked as a Production
+						intern for the CW television show <i>My Crazy Ex Girlfriend</i>.
+					</p>
+				</div>
+			</div>
+			<!-- End Body -->
 		</div>
-		<footer class=" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style="font-family: Moon Flower,MoonFlower;" alt="footer">
-			© 2019 All Rights Reserved
-	</footer>	
-</div>
-</div>
-</div>
+		<!-- contact -->
 
-<!-- End Footer -->
+		<div alt="" class="w-full h-full" id="contact">
+			<div class="block w-full mx-auto pt-32">
+				<button class="block mt-24 mx-auto" onclick="toggle()" style=
+				"border: none; outline: none;"><img src="assets/images/email.png"></button>
+				<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" id=
+				"email" style="font-family: MoonFlower, Moon Flower; text-align: center;">
+					steffiann.mendoza@gmail.com
+				</p>
 
-</body>
+				<div alt="socialMedia" class=
+				"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
+					<a class="inline-block p-5" href="#"><img src=
+					"assets/images/twitter.png"></a> <a class="inline-block p-5" href=
+					"#"><img src="assets/images/linkdin.png"></a> <a class="inline-block p-5"
+					href="#"><img src="assets/images/vimeo.png"></a> <a class=
+					"inline-block p-5" href="#"><img src="assets/images/youtube.png"></a>
+				</div>
+				<!-- footer -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-  $("a").on('click', function(event) {
+				<div alt="footerBar" class="w-screen flex justify-between items-center"
+				style="background-color: #000000;">
+					<div alt="logo" class="mx-auto flex">
+						<a alt="" href="index.html" id="logo"><img src=
+						"assets/images/Steffi-Ann%20Mendoza.png"></a>
+					</div>
 
-    if (this.hash !== "") {
-      event.preventDefault();
+					<footer alt="footer" class=
+					" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
+					"font-family: Moon Flower,MoonFlower;">
+						© 2019 All Rights Reserved
+					</footer>
+				</div>
+			</div>
+		</div>
+		<!-- End Footer -->
+		<script src=
+		"https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js">
+		</script> 
+		<script src="jquery.min.js">
+		</script> 
+		<script>
+		$(document).ready(function(){
+		$("a").on('click', function(event) {
 
-      var hash = this.hash;
+		  if (this.hash !== "") {
+		    event.preventDefault();
 
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 1000, function(){
-   
-        window.location.hash = hash;
-      });
-    } 
-  });
-});
-</script>
-<script>
-	function toggle() {
-		var element = document.getElementById("email");
-		element.classList.toggle("invisible");
-	}
-</script>
-<script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
+		    var hash = this.hash;
 
-  <script>
-	var myIndex = 0;
-	carousel();
+		    $('html, body').animate({
+		      scrollTop: $(hash).offset().top
+		    }, 1000, function(){
+		 
+		      window.location.hash = hash;
+		    });
+		  } 
+		});
+		});
+		</script> 
+		<script>
+		  function toggle() {
+		      var element = document.getElementById("email");
+		      element.classList.toggle("invisible");
+		  }
+		</script> 
+		<script crossorigin="anonymous" integrity=
+		"sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" src=
+		"https://code.jquery.com/jquery-3.4.1.js">
+		</script> 
+		<script>
+		  var myIndex = 0;
+		  carousel();
 
-	function carousel() {
-		var i;
-		var x = document.getElementsByClassName("mySlides");
-		for (i = 0; i < x.length; i++) {
-		   x[i].style.display = "none";  
-		}
-		myIndex++;
-		if (myIndex > x.length) {myIndex = 1}    
-		x[myIndex-1].style.display = "block";  
-		setTimeout(carousel, 2000);
-	}
-	</script>	
-
-
+		  function carousel() {
+		      var i;
+		      var x = document.getElementsByClassName("mySlides");
+		      for (i = 0; i < x.length; i++) {
+		         x[i].style.display = "none";  
+		      }
+		      myIndex++;
+		      if (myIndex > x.length) {myIndex = 1}    
+		      x[myIndex-1].style.display = "block";  
+		      setTimeout(carousel, 2000);
+		  }
+		</script> 
+	</body>
 </html>
